# MLOps-MSNIST-template

./: .pre-commit-config.yaml  LICENSE  README.md  model.pth  pyproject.toml  tasks.py
.github/: dependabot.yaml
.github/workflows/: precommit.yaml  tests.yaml
models/: model.pth
src/mlops_mnist_from_template/: data.py  model.py  train.py
tests/: __init__.py  test_data.py  test_model.py  test_train.py
